--- a/index.html
+++ b/index.html
@@ -9,42 +9,42 @@
 </head>
 <body>
         <div class="sidebar">
-            <div class="dashboardsvg"><object data="svg/view-dashboard.svg" width="50px" height="50px"></object></div>
+            <div class="dashboardsvg"><object data="./svg/view-dashboard.svg" width="50px" height="50px"></object></div>
             <div class="dashboard">Dashboard</div>
             <div class="empty1"></div>
-            <div class="homesvg"><object data="svg/home-circle.svg" width="30px" height="30px"></object></div>
+            <div class="homesvg"><object data="./svg/home-circle.svg" width="30px" height="30px"></object></div>
             <div class="home">Home</div>
-            <div class="profilesvg"><object data="svg/account.svg" width="30px" height="30px"></object></div>
+            <div class="profilesvg"><object data="./svg/account.svg" width="30px" height="30px"></object></div>
             <div class="profile">Profile</div>
-            <div class="messagessvg"><object data="svg/message.svg" width="30px" height="30px"></object></div>
+            <div class="messagessvg"><object data="./svg/message.svg" width="30px" height="30px"></object></div>
             <div class="messages">Messages</div>
-            <div class="historysvg"><object data="svg/history.svg" width="30px" height="30px"></object></div>
+            <div class="historysvg"><object data="./svg/history.svg" width="30px" height="30px"></object></div>
             <div class="history">History</div>
-            <div class="taskssvg"><object data="svg/application-edit-outline.svg" width="30px" height="30px"></object></div>
+            <div class="taskssvg"><object data="./svg/application-edit-outline.svg" width="30px" height="30px"></object></div>
             <div class="tasks">Tasks</div>
-            <div class="communitiessvg"><object data="svg/account-group.svg" width="30px" height="30px"></object></div>
+            <div class="communitiessvg"><object data="./svg/account-group.svg" width="30px" height="30px"></object></div>
             <div class="communities">Communtites</div>
             <div class="empty2"></div>
-            <div class="settingssvg"><object data="svg/cogs.svg" width="30px" height="30px"></object></div>
+            <div class="settingssvg"><object data="./svg/cogs.svg" width="30px" height="30px"></object></div>
             <div class="settings">Settings</div>
-            <div class="supportsvg"><object data="svg/chat-question.svg" width="30px" height="30px"></object></div>
+            <div class="supportsvg"><object data="./svg/chat-question.svg" width="30px" height="30px"></object></div>
             <div class="support">Support</div>
-            <div class="privacysvg"><object data="svg/security.svg" width="30px" height="30px"></object></div>
+            <div class="privacysvg"><object data="./svg/security.svg" width="30px" height="30px"></object></div>
             <div class="privacy">Privacy</div>
         </div>
         <div class="header">
             <div class="headcontainment">
                 <div class="searchsvg">
-                    <object class="searchicon" data="svg/magnify.svg" width="35px" height="35px"></object>
+                    <object class="searchicon" data="./svg/magnify.svg" width="35px" height="35px"></object>
                     <input type="text" id="search" />
-                    <object class="beller" data="svg/bell-ring.svg" width="35px" height="35px"></object>
-                    <object class="pic" data="images/logo_00016.png" width="40px" height="40px"></object>
+                    <object class="beller" data="./svg/bell-ring.svg" width="35px" height="35px"></object>
+                    <object class="pic" data="./images/logo_00016.png" width="40px" height="40px"></object>
                     <p class="blumelogo">Blume</p>
                 </div>
 
                 <div class="underheadcontainment">
                     <div class="secondnet">
-                        <object class="pic2" data="images/logo_00016.png" width="50px" height="60px"></object>
+                        <object class="pic2" data="./images/logo_00016.png" width="50px" height="60px"></object>
                             <div class="thirdnet">
                                 <span class="logosider1">Hi there,</span>
                                 <span class="logosider2">Blume</span>
@@ -69,9 +69,9 @@
                     <div class="grid1">Super Cool Project
                         <p class="content1">Hello everyone welcome to this super cool project.Behance is the world's largest creative network for showcasing and discovering creative work.</p>
                         <div class="icontime">
-                            <object class="staricon" data="svg/star-plus-outline.svg" width="30px" height="30px"></object>
-                            <object class="eyeicon" data="svg/eye-plus-outline.svg" width="30px" height="30px"></object>
-                            <object class="shareicon" data="svg/share-variant.svg" width="30px" height="30px"></object>
+                            <object class="staricon" data="./svg/star-plus-outline.svg" width="30px" height="30px"></object>
+                            <object class="eyeicon" data="./svg/eye-plus-outline.svg" width="30px" height="30px"></object>
+                            <object class="shareicon" data="./svg/share-variant.svg" width="30px" height="30px"></object>
                         </div>
                     </div>
                 </div>
@@ -79,9 +79,9 @@
                     <div class="grid2">Less Cool Project
                         <p class="content2">Partnering with brands for sponsored content is the most widespread way for creators to make money. Depending on the size and engagement of an influencer's following, they can get paid hundreds of thousands of dollars (or even millions) to advertise products or services.</p>
                         <div class="icontime">
-                            <object class="staricon" data="svg/star-plus-outline.svg" width="30px" height="30px"></object>
-                            <object class="eyeicon" data="svg/eye-plus-outline.svg" width="30px" height="30px"></object>
-                            <object class="shareicon" data="svg/share-variant.svg" width="30px" height="30px"></object>
+                            <object class="staricon" data="./svg/star-plus-outline.svg" width="30px" height="30px"></object>
+                            <object class="eyeicon" data="./svg/eye-plus-outline.svg" width="30px" height="30px"></object>
+                            <object class="shareicon" data="./svg/share-variant.svg" width="30px" height="30px"></object>
                         </div>
                     </div>
                 </div>
@@ -89,9 +89,9 @@
                     <div class="grid3">Impossible App
                         <p class="content3">Runway Research is enabling the impossible. Our mission is to build the multimodal AI systems that will usher in a new era of human creativity.</p>
                         <div class="icontime">
-                            <object class="staricon" data="svg/star-plus-outline.svg" width="30px" height="30px"></object>
-                            <object class="eyeicon" data="svg/eye-plus-outline.svg" width="30px" height="30px"></object>
-                            <object class="shareicon" data="svg/share-variant.svg" width="30px" height="30px"></object>
+                            <object class="staricon" data="./svg/star-plus-outline.svg" width="30px" height="30px"></object>
+                            <object class="eyeicon" data="./svg/eye-plus-outline.svg" width="30px" height="30px"></object>
+                            <object class="shareicon" data="./svg/share-variant.svg" width="30px" height="30px"></object>
                         </div>
                     </div>
                 </div>
@@ -99,9 +99,9 @@
                     <div class="grid4">Easy Peasy App
                         <p class="content4">The EasyPeasy app brings together the best ideas, advice, and inspiration from a global community of parents, experts, and your favourite early years brands.</p>
                         <div class="icontime">
-                            <object class="staricon" data="svg/star-plus-outline.svg" width="30px" height="30px"></object>
-                            <object class="eyeicon" data="svg/eye-plus-outline.svg" width="30px" height="30px"></object>
-                            <object class="shareicon" data="svg/share-variant.svg" width="30px" height="30px"></object>
+                            <object class="staricon" data="./svg/star-plus-outline.svg" width="30px" height="30px"></object>
+                            <object class="eyeicon" data="./svg/eye-plus-outline.svg" width="30px" height="30px"></object>
+                            <object class="shareicon" data="./svg/share-variant.svg" width="30px" height="30px"></object>
                         </div>
                     </div>
                 </div>
@@ -109,9 +109,9 @@
                     <div class="grid5">Ad Blocker
                         <p class="content5">Block ads and pop-ups on YouTube, Facebook, Twitch, and your favorite websites. AdBlock is the best ad blocker with over 60 million users</p>
                         <div class="icontime">
-                            <object class="staricon" data="svg/star-plus-outline.svg" width="30px" height="30px"></object>
-                            <object class="eyeicon" data="svg/eye-plus-outline.svg" width="30px" height="30px"></object>
-                            <object class="shareicon" data="svg/share-variant.svg" width="30px" height="30px"></object>
+                            <object class="staricon" data="./svg/star-plus-outline.svg" width="30px" height="30px"></object>
+                            <object class="eyeicon" data="./svg/eye-plus-outline.svg" width="30px" height="30px"></object>
+                            <object class="shareicon" data="./svg/share-variant.svg" width="30px" height="30px"></object>
                         </div>
                     </div>
                 </div>
@@ -119,9 +119,9 @@
                     <div class="grid6">Money Maker
                         <p class="content6">Partnering with brands for sponsored content is the most widespread way for creators to make money. Depending on the size and engagement of an influencer's following, they can get paid hundreds of thousands of dollars (or even millions) to advertise products or services.</p>
                         <div class="icontime">
-                            <object class="staricon" data="svg/star-plus-outline.svg" width="30px" height="30px"></object>
-                            <object class="eyeicon" data="svg/eye-plus-outline.svg" width="30px" height="30px"></object>
-                            <object class="shareicon" data="svg/share-variant.svg" width="30px" height="30px"></object>
+                            <object class="staricon" data="./svg/star-plus-outline.svg" width="30px" height="30px"></object>
+                            <object class="eyeicon" data="./svg/eye-plus-outline.svg" width="30px" height="30px"></object>
+                            <object class="shareicon" data="./svg/share-variant.svg" width="30px" height="30px"></object>
                         </div>
                     </div>
                 </div>
@@ -145,28 +145,28 @@
                 <div class="eighthbox">
                     <div class="grid8">
                         <div class="oner">
-                            <object class="acc1" data="images/images.jpeg" width="40px" height="40px"></object>
+                            <object class="acc1" data="./images/images.jpeg" width="40px" height="40px"></object>
                             <div class="mailandname1">
                                 <p class="person1">@charles</p>
                                 <p class="name1">World Peace Builder</p>
                             </div>
                         </div>
                         <div class="oner">
-                            <object class="acc1" data="images/8j7VZlQC_400x400.jpg" width="40px" height="40px"></object>
+                            <object class="acc1" data="./images/8j7VZlQC_400x400.jpg" width="40px" height="40px"></object>
                             <div class="mailandname1">
                                 <p class="person1">@morgan</p>
                                 <p class="name1">Super Cool Project</p>
                             </div>
                         </div>
                         <div class="oner">
-                            <object class="acc1" data="images/wp6514332-watch-dogs-4k-android-wallpapers.jpg" width="40px" height="40px"></object>
+                            <object class="acc1" data="./images/wp6514332-watch-dogs-4k-android-wallpapers.jpg" width="40px" height="40px"></object>
                             <div class="mailandname1">
                                 <p class="person1">@kendall</p>
                                 <p class="name1">Life Changing App</p>
                             </div>
                         </div>
                         <div class="oner">
-                            <object class="acc1" data="images/pathway-middle-green-leafed-trees-with-sun-shining-through-branches.jpg" width="40px" height="40px"></object>
+                            <object class="acc1" data="./images/pathway-middle-green-leafed-trees-with-sun-shining-through-branches.jpg" width="40px" height="40px"></object>
                             <div class="mailandname1">
                                 <p class="person1">@alex</p>
                                 <p class="name1">No Traffic Maker</p>
